<resources>
    <string name="app_name">GeoWall</string>
    <string name="action_settings">Settings</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="nickname_hint">Nickname</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a valid email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">No account yet? <u>Sign Up!</u></string>
    <string name="title_activity_login">Sign in</string>
    <string name="wall_title">insert a name</string>
    <string name="wall_radius">insert radius</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_detected">No location detected</string>

    <!-- <string name="google_app_id">291302504509</string> -->
    <!-- GeoFencing strings -->

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="location_updated_message">Location updated</string>
    <string name="title_activity_wall">WallActivity</string>

</resources>
