<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg"
    android:weightSum="1">

    <ImageView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/app_logo"
        android:paddingTop="10dp"
        android:paddingBottom="40dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edittext_top"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bot"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:text="@string/login_button_label"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:enabled="true"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:text="@string/sign_up_text"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</LinearLayout>